# static-analysis

./: .bash_history  .viminfo  CMakeLists.txt  Makefile  README.md  a.ast  a.c  a.ll  example-range.ast  header.h  static-analysis
ASTFuncAnalysis/: CMakeLists.txt  README.md
ASTFuncAnalysis/src/: Work2Action.h  Work2Consumer.h  Work2Visitor.h  cmd.py  entity.h  work2.cpp
ASTFuncAnalysis/test/: a.c  header.h
ASTanalysis/: CMakeLists.txt  README.md
ASTanalysis/src/: Work1Action.h  Work1Consumer.h  Work1Visitor.h  cmd.py  entity.h  work1.cpp
ASTanalysis/test/: a.c
FindClassDecls/: CMakeLists.txt  FindClassDecls.cpp  README.md
HelloWorld/: HelloWorld.cpp
HelloWorld/inputs/: input_for_hello.c  input_for_hello.ll
IRUsageAnalysis/: CMakeLists.txt  IRUsage.cpp  Makefile  cmd.py  help-passes.txt  help.txt  test.drawio
IRUsageAnalysis/test/: a.bc  a.c  a.ll  header.h  input_for_hello.ll
PrintFunctionNames/: CMakeLists.txt  PrintFunctionNames.cpp  README.md
template/: CMakeLists.txt  CodeRefactor.cpp  README.md  file.cpp
test/: Makefile  a.ast  a.c  a.ll  a.out  a.txt  astexample.txt  clang.txt  file.ll  parser.cpp  range.ll
work0/: CMakeLists.txt  README.md  a.c  work0.cpp  work0.cpp.bak
work1/: CMakeLists.txt  README.md
work1-template/: CMakeLists.txt  README.md
work1-template/src/: Work1Action.h  Work1Consumer.h  Work1Visitor.h
work1-template/test/: a.c
work1/src/: Work1Consumer.h  Work1Visitor.h  work1.cpp
work1/test/: a.c
